*SVN*

* Fix assert_redirected_to tests according to real-world usage.  Also, don't fail if you add an extra :controller option: [Rick]

    redirect_to :action => 'new'
    assert_redirected_to :controller => 'monkeys', :action => 'new'

* Cache CgiRequest#request_parameters so that multiple calls don't re-parse multipart data. [Rick]

* Diff compared routing options.  Allow #assert_recognizes to take a second arg as a hash to specify optional request method [Rick]

    assert_recognizes({:controller => 'users', :action => 'index'}, 'users')
    assert_recognizes({:controller => 'users', :action => 'create'}, {:path => 'users', :method => :post})

* Diff compared options with #assert_redirected_to [Rick]

* Add support in routes for semicolon delimited "subpaths", like /books/:id;:action [Jamis Buck]

* Change link_to_function and button_to_function to (optionally) take an update_page block instead of a JavaScript string. Closes #4804. [zraii@comcast.net, Sam Stephenson]

* Fixed that remote_form_for can leave out the object parameter and default to the instance variable of the object_name, just like form_for [DHH]

* Modify routing so that you can say :require => { :method => :post } for a route, and the route will never be selected unless the request method is POST. Only works for route recognition, not for route generation. [Jamis Buck]

* Added :add_headers option to verify which merges a hash of name/value pairs into the response's headers hash if the prerequisites cannot be satisfied. [Sam Stephenson]
  ex. verify :only => :speak, :method => :post, 
             :render => { :status => 405, :text => "Must be post" }, 
             :add_headers => { "Allow" => "POST" }

* Added ActionController.filter_parameter_logging that makes it easy to remove passwords, credit card numbers, and other sensitive information from being logged when a request is handled #1897 [jeremye@bsa.ca.gov]


*1.12.1* (April 6th, 2006)
