@@ -63,7 +63,7 @@
 
 <p style="color: green"><%= flash[:notice] %></p>
 
-<%= @content_for_layout %>
+<%= yield %>
 
 </body>
 </html>
